fix: mobile overflow issue solved

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,8 +91,7 @@
   }
 
   body {
-    @apply bg-background text-foreground;
-
+    @apply bg-background text-foreground overflow-x-hidden
   }
 
   .hero-mask {
